Finalizando swagger e arrumando readme
